# flashback

./: README.md  output.json
app/: package-lock.json  package.json  profiles-images-migration.sql  supabase-favorites-migration.sql  supabase-migration.sql
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AuthForm.tsx  FileExplorer.tsx  GraphCanvas.tsx  OSPage.tsx  OSPageSimplified.tsx  Onboarding.tsx  PersonalPage.tsx  PhotosApp.tsx  RealVideoGraphCanvas.tsx  RetroVideoPlayer.tsx  UserDetailPage.tsx  UserProfileWindow.tsx  VideoGraphCanvas.tsx
app/src/contexts/: AuthContext.tsx
app/src/hooks/: usePhotoAPI.ts  useVideoAPI.ts
app/src/lib/: auth.ts  supabase.ts
app/src/styles/: nodeStyles.ts
app/src/types/: graph.ts  sharedMemory.ts  video.ts
facial-stuff/: README.md  app.py  deploy.py  hi.json  output.json  output2.json  requirements.txt  setup_database.sql  supabase_schema.sql
mentra-app/: package.json
mentra-app/src/: index.ts
mentra-app/views/: photo-viewer.ejs
mentra-stream/: package.json
mentra-stream/public/css/: style.css
mentra-stream/public/js/: webview.js
mentra-stream/src/: index.ts  streamSession.ts  tools.ts  webview.ts
mentra-stream/src/views/: webview.ejs
video-processing/: .gitignore  README.md  app.py  pyproject.toml
video-processing/models/: schemas.py
video-processing/services/: facial_recognition.py  storage.py  transcription_service.py  vector_db.py  video_processor.py  vlm_service.py
video-processing/tests/: demo_vid.mov  test_process_video.py
video-processing/utils/: constants.py
(+42 files in other folders)
