[project]
name = "video-processing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "modal>=1.1.4",
    "boto3>=1.40.30",
    "pinecone>=7.3.0",
    "pinecone-plugin-assistant>=1.8.0",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "watchfiles>=1.1.0",
    "typer>=0.17.4",
    "rich>=14.1.0",
    "anthropic>=0.67.0",
    "openai>=1.107.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
